# template

./: .env  .gitignore  docker-compose.yaml  main.py  pyproject.toml  test.py
app/auth/: __init__.py  auth_dependencies.py  auth_helper.py  auth_router.py  auth_service.py  password_checker.py  password_checker_interface.py  password_cheker_dependencies.py
app/config/: config.py
app/core/: __init__.py  config.py
app/core/database/service/: __init__.py  db_service.py
app/core/database/utils/: __init__.py  db_utils.py
app/database/: __init_.py  base.py  db_service.py
app/shared/: __init__.py  crud_generator.py  dependencies.py  enums.py  exceptions.py  hash_helper.py  hash_operations.py  jwt.py  token_service_getter.py  user_db_getter.py
app/token/: __init__.py  jwt_service.py  token_dependencies.py  token_enum.py  token_schema.py  token_service.py  token_service_interface.py  token_types.py
app/user/: __init__.py  user_dependencies.py  user_model.py  user_repo.py  user_repository_interface.py  user_router.py  user_schema.py  user_service.py
app/user/model/: user_model.py
app/user/router/: user_router.py
app/user/schema/: __init__.py  user_schema.py
app/user/service/: user_service.py
certs/: public.pem
certs/access/: access_private.pem
certs/refresh/: refresh_private.pem  refresh_public.pem
